CAF-2274: Update swagger code gen package and jackson libs. Also removed enum specifications from the Audit Web service contract.
